--- a/public/blog.html
+++ b/public/blog.html
@@ -47,9 +47,9 @@
     </li>
 
     </ul>
-      <a href="https://templatedeck.com/brook-html-template.html" aria-label="Download this template" class="fs-6 link-fancy">
+<!--       <a href="https://templatedeck.com/brook-html-template.html" aria-label="Download this template" class="fs-6 link-fancy">
         Download Template
-      </a>
+      </a> -->
 </div>
 </nav>
 
