--- a/public/content.html
+++ b/public/content.html
@@ -26,7 +26,7 @@
   <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-boxes mb-1" viewBox="0 0 16 16">
   <path d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434L7.752.066ZM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567L4.25 7.504ZM7.5 9.933l-2.75 1.571v3.134l2.75-1.571V9.933Zm1 3.134 2.75 1.571v-3.134L8.5 9.933v3.134Zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567-2.742 1.567Zm2.242-2.433V3.504L8.5 5.076V8.21l2.75-1.572ZM7.5 8.21V5.076L4.75 3.504v3.134L7.5 8.21ZM5.258 2.643 8 4.21l2.742-1.567L8 1.076 5.258 2.643ZM15 9.933l-2.75 1.571v3.134L15 13.067V9.933ZM3.75 14.638v-3.134L1 9.933v3.134l2.75 1.571Z"/>
 </svg>
-  <span class="ms-md-1 mt-1 fw-bolder me-md-5">Brook</span>
+  <span class="ms-md-1 mt-1 fw-bolder me-md-5">Maternal Smoke Studies</span>
 </a>
 
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0 list-group list-group-horizontal">
@@ -47,9 +47,9 @@
     </li>
 
     </ul>
-      <a href="https://templatedeck.com/brook-html-template.html" aria-label="Download this template" class="fs-6 link-fancy">
+<!--       <a href="https://templatedeck.com/brook-html-template.html" aria-label="Download this template" class="fs-6 link-fancy">
         Download Template
-      </a>
+      </a> -->
 </div>
 </nav>
 
@@ -61,9 +61,9 @@
     </div>
     <div class="col-11 col-lg-10 col-xl-6 border-bottom border-top py-vh-3">
       <div class="row">
-        <p class="lead">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <p class="lead">Welcome to the premiere destination for understanding the curious and often hilarious consequences of maternal smoky adventures.</p>
+        <p>It all began in the rolling hills of Singletonville, where some were infused, while still in the womb, with a blend of natural herbs and vintage tobacco. This unique concoction gifted her with a range of superpowers: the ability to detect when brownies have an extra "herb", and an uncanny knack for cloud-spotting. Yep, you guessed it; she can spot a cumulus from a stratus a mile away!</p>
+        <p>To celebrate the quirkiest, smokiest maternal histories worldwide, starting with our one and only, Katelyn. Do you have the lung capacity to laugh as hard as Katelyn's mom or (anybody's mom) did back in the day? Let's find out!</p>
       </div>
     </div>
   </div>
@@ -73,7 +73,7 @@
 
     <footer>
   <div class="container text-center small py-vh-3">Made by
-    <a href="https://templatedeck.com" class="link-fancy" target="_blank">templatedeck.com</a>
+    <a href="https://templatedeck.com" class="link-fancy" target="_blank">HLB</a>
   </div>
   
 </footer>
