--- a/public/post-the-whimsy-of-feline-fascination.html
+++ b/public/post-the-whimsy-of-feline-fascination.html
@@ -1,1 +1,112 @@
+<!doctype html>
+<html class="h-100" lang="en">
+  <head>
+      <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <meta name="description" content="A well made and handcrafted Bootstrap 5 template">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="96x96" href=".t/img/favicon.png">
+  
+  <title>The Whimsy of Feline Fascination</title>
+  <link rel="stylesheet" href="css/theme.min.css">
 
+
+  </head>
+  <body data-bs-spy="scroll" data-bs-target="#navScroll">
+    <nav id="navScroll" class="navbar navbar-light py-vh-3 pb-0 px-vw-5" tabindex="0">
+  <div class="container-fluid">
+    <a class="navbar-brand pe-md-4 fs-4 col-12 col-md-auto text-center" href="index.html">
+  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-boxes mb-1" viewBox="0 0 16 16">
+  <path d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434L7.752.066ZM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567L4.25 7.504ZM7.5 9.933l-2.75 1.571v3.134l2.75-1.571V9.933Zm1 3.134 2.75 1.571v-3.134L8.5 9.933v3.134Zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567-2.742 1.567Zm2.242-2.433V3.504L8.5 5.076V8.21l2.75-1.572ZM7.5 8.21V5.076L4.75 3.504v3.134L7.5 8.21ZM5.258 2.643 8 4.21l2.742-1.567L8 1.076 5.258 2.643ZM15 9.933l-2.75 1.571v3.134L15 13.067V9.933ZM3.75 14.638v-3.134L1 9.933v3.134l2.75 1.571Z"/>
+</svg>
+  <span class="ms-md-1 mt-1 fw-bolder me-md-5">Maternal Smoke Studies</span>
+</a>
+
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0 list-group list-group-horizontal">
+      <li class="nav-item">
+    <a class="nav-link fs-5" href="index.html" aria-label="The Blog Archive">
+      Home
+    </a>
+  </li>
+<li class="nav-item">
+    <a class="nav-link fs-5" href="blog.html" aria-label="The Blog Archive">
+      Journal
+    </a>
+  </li>
+  <li class="nav-item">
+      <a class="nav-link fs-5" href="content.html" aria-label="The Blog Archive">
+        About
+      </a>
+    </li>
+
+    </ul>
+<!--       <a href="https://templatedeck.com/brook-html-template.html" aria-label="Download this template" class="fs-6 link-fancy">
+        Download Template
+      </a> -->
+</div>
+</nav>
+
+    <main class="container py-vh-3">
+    <div class="row d-flex justify-content-center text-center">
+        <div class="col-12 col-lg-10 col-xl-6">
+            <small class="text-muted">By Clair Mewington</small>
+            <h1 class="display-huge">The Whimsy of Feline Fascination: Unraveling the Smoke-Hazed Connection Between Unique Laughs, Psychology, and Maternal Choices</h1>
+            <p class="lead pt-2 py-vh-2">In an enigmatic study released earlier this week, researchers have delved deep into the intricate connections between a fondness for feline companions, a desire to dive into psychology, idiosyncratic laughter, and the curious effects of mothers smoking weed during pregnancy.</p>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <img src="img/webp/office111.webp" class="img-fluid" alt="">
+            </div>
+        </div>
+
+        <div class="row d-flex justify-content-center text-start">
+            <div class="col-12 col-lg-10 col-xl-6 py-vh-2">
+                <p>The investigation, spearheaded at the esteemed Feline University of Neurotic Knowledge (F.U.N.K.), initially set out to explore why certain individuals found cat videos more therapeutic than even the most transcendental meditation sessions. However, as the study progressed, it ventured into more smoke-hazed territories.</p>
+
+                <p>Dr. Hiss-teria, the lead researcher, remarked, "We were intrigued to find a recurring pattern. A significant number of participants who grew up with mothers who occasionally indulged in some herbal relaxation during pregnancy displayed a particularly whimsical kind of laughter. Not just that, these same individuals also showed a deep-seated passion for understanding the human psyche and exhibited a peculiar affinity for cats."</p>
+
+                <p>Some participants described their chuckles as a concoction of "a hiccup caught in an endless loop and the distant chirps of a tropical bird at dawn." Others said their laughter could best be likened to "the hybrid sound of a cackling hyena on helium."</p>
+
+                <p>When inquired about their pull towards psychology, many participants shared their hypothesis. They felt that perhaps their exposure to maternal cannabis use, albeit indirect, could have unlocked neural pathways that made them more empathetic to the subtle judgments of their feline friends or more curious about the quirks of the human mind.</p>
+
+                <p>One respondent, trying hard to stifle her cascade of comical giggles, stated, "Every time I chuckle, my cat gives me a gaze that's part disbelief, part judgment. I have this urge to understand the intricate dance of neurons that makes her – and me – tick."</p>
+
+                <p>Although the study is yet to draw concrete conclusions, it has certainly lit up discussions in various academic circles. Researchers at F.U.N.K. are already charting out their next project: the exploration of how cat memes influence the choices of individuals whose moms might have been a bit 'green-thumbed' during pregnancy.</p>
+
+                <p><strong>Disclaimer:</strong> This article is a work of fiction, designed solely for amusement. Any resemblance to real persons or events is purely coincidental. Always ensure that content shared is respectful and considerate of others' experiences and choices.</p>
+            </div>
+        </div>
+    </div>
+</main>
+
+    <div class="container d-flex justify-content-between">
+      
+
+
+<div class="col border-top border-end py-vh-3 d-flex align-items-center">
+  
+      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+</svg>
+<!--  <a href="post-why-zombies-are-slow.html" class="ms-2 display-6">Why Zombies are slow</a> -->
+      
+</div>
+<div class="col border-top text-end py-vh-3 d-flex align-items-center justify-content-end">
+  
+<div class="h1 text-muted display-4 opacity-25 fw-bolder">Puh, you are at the beginning!</div>
+  
+</div>
+
+    </div>
+    <footer>
+  <div class="container text-center small py-vh-3">Made by
+    <a href="https://templatedeck.com" class="link-fancy" target="_blank">HLB</a>
+  </div>
+  
+</footer>
+
+  </body>
+</html>
